test/studies/hpcc/RA/marybeth/ra-uint-test4.chpl
const logsize:int = 4;
const TableSize:uint(64) = (1 << logsize);

writeln(TableSize);
